--- a/src/style.css
+++ b/src/style.css
@@ -3,9 +3,38 @@
 }
 
 body {
-    margin: 0;
+    height: 100vh;
     min-height: 100vh;
+    width: 100vw;
     min-width: 100vw;
+}
+
+body.home {
+    background: url('../assets/home.jpg');
+    background-size: cover;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+body.menu {
+    background: url('../assets/menu.jpg');
+    background-size: cover;
+    background-position: top bottom;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+body.contact {
+    background: url('../assets/contact.jpg');
+    background-size: cover;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+body {
+    margin: 0;
     display: flex;
     flex-direction: column;
 }
@@ -45,6 +74,10 @@ nav li {
 
 nav li {
     cursor: pointer;
+}
+
+main {
+    max-height: 90vh;
 }
 
 footer {
