--- a/src/style.css
+++ b/src/style.css
@@ -40,9 +40,14 @@ body {
 }
 
 header,
-main,
 footer {
     padding-inline: 2rem;
+}
+
+header,
+footer {
+    background-color: white;
+    opacity: .4;
 }
 
 header {
@@ -77,7 +82,39 @@ nav li {
 }
 
 main {
-    max-height: 90vh;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.content {
+    font-size: 1.5rem;
+    background-color: white;
+    opacity: 0.3;
+}
+
+.content--home {
+    margin: 5rem;
+    padding: 3rem;
+    max-width: 50ch;
+}
+
+.content--menu {
+    margin: 5rem;
+    max-width: 45rem;
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+}
+
+.content--menu article {
+    padding: 3rem;
+}
+
+.content--contact {
+    margin: 5rem;
+    padding: 4rem;
+    max-width: 40ch;
 }
 
 footer {
