--- a/src/style.css
+++ b/src/style.css
@@ -46,8 +46,8 @@ footer {
 
 header,
 footer {
-    background-color: white;
-    opacity: .4;
+    background-color: rgba(255, 255, 255, .3);
+    opacity: .9;
 }
 
 header {
@@ -89,8 +89,8 @@ main {
 
 .content {
     font-size: 1.5rem;
-    background-color: white;
-    opacity: 0.3;
+    background-color: rgba(255, 255, 255, .3);
+    opacity: .75;
 }
 
 .content--home {
