--- a/src/style.css
+++ b/src/style.css
@@ -135,6 +135,12 @@ footer {
     align-items: center;
 }
 
+a,
+a:hover {
+    color: inherit;
+    text-decoration: none;
+}
+
 @media (min-width: 450px) {
     header {
         flex-direction: row;
